Added info function, updated swagger.
